--- a/Lectures/L4_transforming_data/L4_data_transform.Rmd
+++ b/Lectures/L4_transforming_data/L4_data_transform.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Tidy data"
+title: "Transforming data"
 subtitle: "<br><br> IDDS 2201: Data Analytics"
 author: "Vincent L. Cannataro, Ph.D."
 output:
