--- a/Lectures/L4_transforming_data/L4_data_transform_p2.Rmd
+++ b/Lectures/L4_transforming_data/L4_data_transform_p2.Rmd
@@ -330,20 +330,20 @@ class: middle
 ## Student records
 
 - Have:
-  - Enrolment: official university enrolment records
+  - Enrollment: official university enrollment records
   - Survey: Student provided info missing students who never filled it out and including students who filled it out but dropped the class
 - Want: Survey info for all enrolled in class 
 
 --
 
 ```{r include=FALSE}
-enrolment <- read_csv("data/students/enrolment.csv")
+enrollment <- read_csv("data/students/enrolment.csv")
 survey <- read_csv("data/students/survey.csv")
 ```
 
 .pull-left[
 ```{r message = FALSE}
-enrolment
+enrollment
 ```
 ]
 .pull-right[
@@ -360,14 +360,14 @@ survey
 
 .panel[.panel-name[In class]
 ```{r}
-enrolment %>% 
+enrollment %>% 
   left_join(survey, by = "id") #<<
 ```
 ]
 
 .panel[.panel-name[Survey missing]
 ```{r}
-enrolment %>% 
+enrollment %>% 
   anti_join(survey, by = "id") #<<
 ```
 ]
@@ -375,7 +375,7 @@ enrolment %>%
 .panel[.panel-name[Dropped]
 ```{r}
 survey %>% 
-  anti_join(enrolment, by = "id") #<<
+  anti_join(enrollment, by = "id") #<<
 ```
 ]
 
@@ -472,11 +472,38 @@ class: middle
 
 # .hand[We...]
 
-.huge[.green[have]] .hand[data organised in an unideal way for our analysis]
+.huge[.green[have]] .hand[data organized in an unideal way for our analysis]
 
-.huge[.pink[want]] .hand[to reorganise the data to carry on with our analysis]
+.huge[.pink[want]] .hand[to reorganize the data to carry on with our analysis]
 
 ---
+
+background-image: url("img/tidydata_2.jpg")
+background-size: contain
+
+---
+
+background-image: url("img/tidydata_3.jpg")
+background-size: contain
+
+---
+
+background-image: url("img/tidydata_4.jpg")
+background-size: contain
+
+---
+
+background-image: url("img/tidydata_5.jpg")
+background-size: contain
+
+
+---
+
+background-image: url("img/tidydata_7.jpg")
+background-size: contain
+
+---
+
 
 ## Data: Sales
 
@@ -852,3 +879,15 @@ ggplot(trump_longer,
 ]
 
 ]
+
+
+---
+
+# Attributions
+
+Some of the material in this slide deck was inspired by and/or partially adapted from several open-source data science resources, including
+
+- The [R for Data Science](https://r4ds.had.co.nz/) textbook by Hadley Wickham & Garrett Grolemund [CC BY-NC-ND 3.0 US](https://creativecommons.org/licenses/by-nc-nd/3.0/us/) 
+- The [datasciencebox](https://github.com/rstudio-education/datascience-box) by Mine Çetinkaya-Rundel [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/) 
+- Artwork by @allison_horst [CC BY-SA 4.1](https://creativecommons.org/licenses/by-sa/4.0/) 
+
