--- a/Lectures/L5_data_types_classes_recoding/L5_data_types_classes_recode.Rmd
+++ b/Lectures/L5_data_types_classes_recoding/L5_data_types_classes_recode.Rmd
@@ -46,7 +46,7 @@ cat_lovers
 
 ```{r}
 cat_lovers %>%
-  summarise(mean_cats = mean(number_of_cats))
+  summarize(mean_cats = mean(number_of_cats))
 ```
 
 ---
@@ -65,7 +65,7 @@ knitr::include_graphics("img/mean-help.png")
 
 ```{r}
 cat_lovers %>%
-  summarise(mean_cats = mean(number_of_cats, na.rm = TRUE))
+  summarize(mean_cats = mean(number_of_cats, na.rm = TRUE))
 ```
 
 ---
@@ -105,7 +105,7 @@ cat_lovers %>%
     name == "Doug Bass"    ~ 3,
     TRUE                   ~ as.numeric(number_of_cats)
   )) %>%
-  summarise(mean_cats = mean(number_of_cats))
+  summarize(mean_cats = mean(number_of_cats))
 ```
 ]
 
@@ -123,7 +123,7 @@ cat_lovers %>%
     ),
     number_of_cats = as.numeric(number_of_cats)
   ) %>%
-  summarise(mean_cats = mean(number_of_cats))
+  summarize(mean_cats = mean(number_of_cats))
 ```
 
 ---
@@ -315,7 +315,7 @@ Let's give formal names to what we've seen so far:
 .your-turn[
 ### .hand[Your turn!]
 
-- Assignment on ECLearn > `in-class exercise, data types and recoding` > accept assignment, open `type-coercion.Rmd` and knit.
+- Assignment on ECLearn > `in-class exercize, data types and recoding` > accept assignment, open `type-coercion.Rmd` and knit.
 - What is the type of the given vectors? First, guess. Then, try it out in R by removing the comment symbol (`#`). 
 If your guess was correct, great! If not, discuss why they have that type.
 ]
@@ -653,7 +653,7 @@ knitr::include_graphics("img/forcats-part-of-tidyverse.png")
 .your-turn[
 ### .hand[Your turn!]
 
-- Assignment on ECLearn > `in-class exercise, data types and recoding` > accept assignment, open `hotels-forcats.Rmd` > knit.
+- Assignment on ECLearn > `in-class exercize, data types and recoding` > accept assignment, open `hotels-forcats.Rmd` > knit.
 - Recreate the x-axis of the following plot. 
 - **Stretch goal:** Recreate the y-axis.
 ]
@@ -664,7 +664,7 @@ hotels <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tid
 hotels %>%
   mutate(arrival_date_month = fct_relevel(arrival_date_month, month.name)) %>%
   group_by(hotel, arrival_date_month) %>%   # group by hotel type and arrival month
-  summarise(mean_adr = mean(adr)) %>%       # calculate mean_adr for each group
+  summarize(mean_adr = mean(adr)) %>%       # calculate mean_adr for each group
   ggplot(aes(
     x = arrival_date_month,
     y = mean_adr,                           # y-axis is the mean_adr calculated above
@@ -691,7 +691,7 @@ hotels %>%
 hotels %>%
 mutate(arrival_date_month = fct_relevel(arrival_date_month, month.name)) %>%
 group_by(hotel, arrival_date_month) %>%   # group by hotel type and arrival month
-summarise(mean_adr = mean(adr)) %>%       # calculate mean_adr for each group
+summarize(mean_adr = mean(adr)) %>%       # calculate mean_adr for each group
 ggplot(aes(
 x = arrival_date_month,
 y = mean_adr,                           # y-axis is the mean_adr calculated above
