--- a/Lectures/L10_functions_and_iteration/L10_functions_and_iteration.Rmd
+++ b/Lectures/L10_functions_and_iteration/L10_functions_and_iteration.Rmd
@@ -757,7 +757,7 @@ scrape_speech<- function(url){
     error = function(cond){NA}) # if error, return NA
   
   # if there was the error, return NA from the main function
-  if(is.na(page)){
+  if(is.na(inaug_address)){
     return(NA)
   }
   
@@ -779,7 +779,7 @@ scrape_speech<- function(url){
 
 ```{r, eval = F}
 for(speech_ind in seq_along(inaug_table$full_link)){
-  inaug_table$speech[speech_ind] <- inaug_grab(inaug_url = inaug_table$full_link[speech_ind])
+  inaug_table$speech[speech_ind] <- scrape_speech(url = inaug_table$full_link[speech_ind])
   message(paste("Got speech from",inaug_table$President[speech_ind],inaug_table$Term[speech_ind]))
   Sys.sleep(runif(1)+3)
 }
@@ -861,6 +861,130 @@ inaug_table$speech[2]
 
 
 ---
+
+## Using the `map` family of functions
+
+```{r, eval=F}
+# wow much simpler... 
+all_speeches <- map(inaug_table$full_link, scrape_speech)
+```
+
+
+
+```{r,include=F,eval=F}
+# ran once, do not want to rerun each knit
+all_speeches <- map(inaug_table$full_link, scrape_speech)
+saveRDS(all_speeches, file = "data/all_speeches.RData")
+```
+
+
+
+```{r, include=FALSE}
+all_speeches <- readRDS(file = "data/all_speeches.RData")
+```
+
+
+```{r}
+glimpse(all_speeches)
+```
+
+
+
+---
+
+
+## How does mapping work?
+
+Suppose we have exam 1 and exam 2 scores of 4 students stored in a list...
+
+```{r}
+exam_scores <- list(
+  exam1 <- c(80, 90, 70, 50),
+  exam2 <- c(85, 83, 45, 60)
+)
+```
+
+--
+
+...and we find the mean score in each exam
+
+```{r}
+map(exam_scores, mean)
+```
+
+---
+
+...and suppose we want the results as a numeric (double) vector
+
+```{r}
+map_dbl(exam_scores, mean)
+```
+
+...or as a character string
+
+```{r}
+map_chr(exam_scores, mean)
+```
+
+---
+
+## `map_something`
+
+Functions for looping over an object and returning a value (of a specific type):
+
+* `map()` - returns a list
+* `map_lgl()` - returns a logical vector
+* `map_int()` - returns a integer vector
+* `map_dbl()` - returns a double vector
+* `map_chr()` - returns a character vector
+* `map_df()` / `map_dfr()` - returns a data frame by row binding
+* `map_dfc()` - returns a data frame by column binding
+* ...
+
+---
+
+## Need to add the speeches to our data frame.
+### Turning the speeches into a data frame
+
+.pull-left[
+```{r}
+# enframe turns a list into a data frame
+all_speeches_df <- all_speeches %>% 
+  enframe(value = "speech")
+all_speeches_df
+```
+]
+
+--
+
+.pull-right[
+```{r}
+# unnest explodes each list element 
+# just one per row here, so retains 
+# original number of rows.
+all_speeches_df <- all_speeches_df %>%
+  unnest(speech) 
+all_speeches_df
+```
+]
+
+
+---
+
+## Need to add the speeches to our data frame.
+### Adding the speeches as a column 
+
+```{r}
+inaug_table <- inaug_table %>%
+  mutate(speech = all_speeches_df$speech)
+
+glimpse(inaug_table)
+```
+
+
+
+---
+
 
 # Attributions
 
