--- a/Lectures/L12_modeling_p1/L12_modeling_part_1.Rmd
+++ b/Lectures/L12_modeling_p1/L12_modeling_part_1.Rmd
@@ -407,7 +407,7 @@ ggplot(data = ht_wt_fit_aug) +
   guides(color = FALSE) +
   scale_color_manual(values = c("#260b27", "#e6b0e7")) +
   geom_text(aes(x = 0, y = 150), label = "Positive residual", color = "#e6b0e7", hjust = 0, size = 8) +
-  geom_text(aes(x = 150, y = 25), label = "Negative residual", color = "#260b27", hjust = 0, size = 8) + 
+  geom_text(aes(x = 100, y = 15), label = "Negative residual", color = "#260b27", hjust = 0, size = 8) + 
   theme_bw()
 ```
 ]
@@ -852,12 +852,12 @@ linear_reg() %>%
 
 ---
 
-## Dummy variables
+## binary variables
 
 ```{r ref.label="ht-school", echo = FALSE}
 ```
 
-- When the categorical explanatory variable has many levels, they're encoded to **dummy variables**
+- When the categorical explanatory variable has many levels, they're encoded to **binary variables**
 - Each coefficient describes the expected difference between heights in that particular school compared to the baseline level
 
 ---
@@ -866,7 +866,7 @@ linear_reg() %>%
 
 .pull-left-wide[
 ```{r echo=FALSE}
-dummy_df <- pp %>% 
+binary_df <- pp %>% 
   select(school_pntg) %>% 
   group_by(school_pntg) %>% 
   sample_n(1) %>%
@@ -879,15 +879,15 @@ dummy_df <- pp %>%
     X    = as.integer(ifelse(school_pntg == "X", 1L, 0))
   )
 
-dummy_df %>%
+binary_df %>%
   kable(align = "lcccccc") %>%
   kable_styling() %>%
-  column_spec(2, width = "10em", background = spec_color(dummy_df$D_FL[1:7], end = 0.8), color = "white") %>%
-  column_spec(3, width = "10em", background = spec_color(dummy_df$F[1:7], end = 0.8), color = "white") %>%
-  column_spec(4, width = "10em", background = spec_color(dummy_df$G[1:7], end = 0.8), color = "white") %>%
-  column_spec(5, width = "10em", background = spec_color(dummy_df$I[1:7], end = 0.8), color = "white") %>%
-  column_spec(6, width = "10em", background = spec_color(dummy_df$S[1:7], end = 0.8), color = "white") %>%
-  column_spec(7, width = "10em", background = spec_color(dummy_df$X[1:7], end = 0.8), color = "white")
+  column_spec(2, width = "10em", background = spec_color(binary_df$D_FL[1:7], end = 0.8), color = "white") %>%
+  column_spec(3, width = "10em", background = spec_color(binary_df$F[1:7], end = 0.8), color = "white") %>%
+  column_spec(4, width = "10em", background = spec_color(binary_df$G[1:7], end = 0.8), color = "white") %>%
+  column_spec(5, width = "10em", background = spec_color(binary_df$I[1:7], end = 0.8), color = "white") %>%
+  column_spec(6, width = "10em", background = spec_color(binary_df$S[1:7], end = 0.8), color = "white") %>%
+  column_spec(7, width = "10em", background = spec_color(binary_df$X[1:7], end = 0.8), color = "white")
 ```
 ]
 .pull-right-narrow[
